Delete resource_tag when deleting resource